worldgroup and custom flag support